<resources>
    <string name="app_name">catalogo</string>

    <string name="registrarse_label">Registrarse ahora</string>
    <string name="usuario_label">usuario</string>
    <string name="correo_label">Correo</string>
    <string name="passwrod_label">Contraseña</string>
    <string name="button_registrarse_label">Registrarse</string>

    <!--cardView productos-->
    <string name="precio_label">Precio $</string>

    <!--Registrarse-->
    <string name="suser_name_label">escriba tu nombre</string>
    <string name="mail_label">escriba tu correo electronico</string>
    <string name="password_label">escribe tu contraseña</string>
    <string name="message_register">Usuario registrado </string>


    <!-- dialogo -->

    <string name="cargando_datos_label">Cargando Datos</string>
    <string name="espere_por_favor_label">Espere por favor</string>

    <!-- categorias-->

    <string name="titulo_label">titulo</string>
    <string name="agregar_label">agregar</string>
    <string name="editar_label">editar</string>
    <string name="escribe_un_titulo_label">escibe un titulo</string>

    <!--login-->
    <string name="login_label">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
