<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rojo_negro"
    tools:context=".activities.RegistraseActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/registrarse_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/colorIcons"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextUsuarioRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/desing_edit_text"
        android:drawableLeft="@mipmap/ic_person"
        android:ems="10"
        android:hint="@string/usuario_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextMailRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/desing_edit_text_top"
        android:drawableLeft="@mipmap/ic_mail"
        android:ems="10"
        android:hint="@string/correo_label"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioRegistro"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextPasswordRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/desing_edit_text_bottom"
        android:drawableLeft="@mipmap/ic_password"
        android:ems="10"
        android:hint="@string/passwrod_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMailRegistro"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/button_registrarse_label"
        android:background="@drawable/desing_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegistro" />

</android.support.constraint.ConstraintLayout>